--- a/frontend/web/src/index.html
+++ b/frontend/web/src/index.html
@@ -1,11 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Web</title>
   <base href="/">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Author Content -->
+  <meta name="author" content="Daniel Githiomi" />
+  <meta name="github" content="https://github.com/danielgithiomi" />
+  <meta name="repository" content="https://github.com/danielgithiomi/pocket-pilot" />
+  <meta name="description" content="Pocket Pilot - Navigate your personal finances" />
+
+  <!-- Tab Content  -->
+  <title>Pocket Pilot</title>
+  <link rel="icon" type="image/png" href="/images/branding/logo.png" />
+
 </head>
 <body>
   <app-root></app-root>
