Feat (frontend-assets) 'PP-007': Add Geist Mono font for frontend usage to the angular assets folder.
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/src/index.html
+++ b/frontend/web/src/index.html
@@ -3,20 +3,39 @@
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
 
   <!-- Author Content -->
-  <meta name="author" content="Daniel Githiomi" />
-  <meta name="github" content="https://github.com/danielgithiomi" />
-  <meta name="repository" content="https://github.com/danielgithiomi/pocket-pilot" />
-  <meta name="description" content="Pocket Pilot - Navigate your personal finances" />
+  <meta content="Daniel Githiomi" name="author"/>
+  <meta content="https://github.com/danielgithiomi" name="github"/>
+  <meta content="https://github.com/danielgithiomi/pocket-pilot" name="repository"/>
+  <meta content="Pocket Pilot - Navigate your personal finances" name="description"/>
 
   <!-- Tab Content  -->
   <title>Pocket Pilot</title>
-  <link rel="icon" type="image/png" href="/images/branding/logo.png" />
+  <link href="/images/branding/logo.png" rel="icon" type="image/png"/>
+
+  <!-- Fonts -->
+  <link as="font"
+        crossorigin
+        href="/assets/fonts/geist_mono/GeistMono-Regular.ttf"
+        rel="preload"
+        type="font/ttf">
+
+  <link as="font"
+        crossorigin
+        href="/assets/fonts/geist_mono/GeistMono-Medium.ttf"
+        rel="preload"
+        type="font/ttf">
+
+  <link as="font"
+        crossorigin
+        href="/assets/fonts/geist_mono/GeistMono-Bold.ttf"
+        rel="preload"
+        type="font/ttf">
 
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
