--- a/frontend/web/src/index.html
+++ b/frontend/web/src/index.html
@@ -1,41 +1,57 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <base href="/">
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <head>
+    <base href="/" />
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 
-  <!-- Author Content -->
-  <meta content="Daniel Githiomi" name="author"/>
-  <meta content="https://github.com/danielgithiomi" name="github"/>
-  <meta content="https://github.com/danielgithiomi/pocket-pilot" name="repository"/>
-  <meta content="Pocket Pilot - Navigate your personal finances" name="description"/>
+    <!-- Author Content -->
+    <meta content="Daniel Githiomi" name="author" />
+    <meta content="https://github.com/danielgithiomi" name="github" />
+    <meta content="https://github.com/danielgithiomi/pocket-pilot" name="repository" />
+    <meta content="Pocket Pilot - Navigate your personal finances" name="description" />
 
-  <!-- Tab Content  -->
-  <title>Pocket Pilot</title>
-  <link href="/images/branding/logo.png" rel="icon" type="image/png"/>
+    <!-- Tab Content  -->
+    <title>Pocket Pilot</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/images/branding/dark_logo.png"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/images/branding/logo.png"
+      media="(prefers-color-scheme: dark)"
+    />
 
-  <!-- Fonts -->
-  <link as="font"
-        crossorigin
-        href="/assets/fonts/geist_mono/GeistMono-Regular.ttf"
-        rel="preload"
-        type="font/ttf">
+    <!-- Fonts -->
+    <link
+      as="font"
+      crossorigin
+      href="/assets/fonts/geist_mono/GeistMono-Regular.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
 
-  <link as="font"
-        crossorigin
-        href="/assets/fonts/geist_mono/GeistMono-Medium.ttf"
-        rel="preload"
-        type="font/ttf">
+    <link
+      as="font"
+      crossorigin
+      href="/assets/fonts/geist_mono/GeistMono-Medium.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
 
-  <link as="font"
-        crossorigin
-        href="/assets/fonts/geist_mono/GeistMono-Bold.ttf"
-        rel="preload"
-        type="font/ttf">
-
-</head>
-<body>
-<app-root></app-root>
-</body>
+    <link
+      as="font"
+      crossorigin
+      href="/assets/fonts/geist_mono/GeistMono-Bold.ttf"
+      rel="preload"
+      type="font/ttf"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
